  portion of the contents of the heap.

The following bugs are resolved with this release:

  [12154] Do not fail DNS resolution for CNAMEs which are not host names
  [28846] CMSG_NXTHDR may trigger -Wstrict-overflow warning
  [29305] Conserve NSS buffer space during DNS packet parsing
  [29415] nscd: Fix netlink cache invalidation if epoll is used
  [29446] _dlopen now ignores dl_caller argument in static mode
  [29485] Linux: Terminate subprocess on late failure in tst-pidfd
  [29490] alpha: New __brk_call implementation is broken
  [29528] elf: Call __libc_early_init for reused namespaces
  [29539] libc: LD_TRACE_LOADED_OBJECTS changed how vDSO library are

Version 2.36

Major new features:

* Support for DT_RELR relative relocation format has been added to
  glibc.  This is a new ELF dynamic tag that improves the size of
  relative relocations in shared object files and position independent
  executables (PIE).  DT_RELR generation requires linker support for
  -z pack-relative-relocs option, which is supported for some targets
  in recent binutils versions.  Lazy binding doesn't apply to DT_RELR.

* On Linux, the pidfd_open, pidfd_getfd, and pidfd_send_signal functions
  have been added.  The pidfd functionality provides access to a process
  while avoiding the issue of PID reuse on tranditional Unix systems.

* On Linux, the process_madvise function has been added. It has the
  same functionality as madvise but alters the target process identified
  by the pidfd.

* On Linux, the process_mrelease function has been added.  It allows a
  caller to release the memory of a dying process.  The release of the
  memory is carried out in the context of the caller, using the caller's
  CPU affinity, and priority with CPU usage accounted to the caller.

* The “no-aaaa” DNS stub resolver option has been added.  System
  administrators can use it to suppress AAAA queries made by the stub
  resolver, including AAAA lookups triggered by NSS-based interfaces